# projects

./: .gitattributes  .gitignore  .prettierignore  .prettierrc  LICENSE  README.md  nx.json  package-lock.json  package.json  pom.xml
.nx/installation/: package-lock.json  package.json
books/architecture-patterns/: README.MD
books/architecture-patterns/chapter-01/: model.py  test_batches.py  value_objects.py
books/architecture-patterns/chapter-02/: conftest.py  orm_declarative.py  requirements.txt  test_allocate.py
books/architecture-patterns/chapter-03/: sync.py  test_sync.py
books/architecture-patterns/chapter-04/: .coveragerc  Dockerfile  conftest.py  docker-compose.yml  flask_app.py  model.py  orm.py  pyproject.toml  repository.py  (+6 more)
books/architecture-patterns/chapter-09/: Makefile  pyproject.toml  requirements.txt
books/architecture-patterns/chapter-09/src/allocation/adapters/: email.py  orm.py
books/architecture-patterns/chapter-09/src/allocation/domain/: model.py
books/architecture-patterns/chapter-09/src/allocation/entrypoints/: flask_app.py
books/architecture-patterns/chapter-09/src/allocation/service_layer/: handlers.py
books/architecture-patterns/chapter-09/src/allocation/service_layer/message_bus/: abstract_message_bus.py  message_bus.py
books/architecture-patterns/chapter-09/tests/: conftest.py
books/architecture-patterns/chapter-09/tests/e2e/: test_api.py
books/architecture-patterns/chapter-09/tests/integration/: test_uow.py
books/architecture-patterns/chapter-09/tests/unit/: test_batches.py
training/java/: pom.xml  project.json
(+226 files in other folders)
